<resources>
    <string name="app_name">CO₂Incubator</string>
    <string name="co2peiyangxiang">CO₂</string>
    <string name="condition_search">条件检索</string>
    <string name="name_generation">名称/批次</string>
    <string name="input_name_generation">请输入名称/批次</string>
    <string name="batch">代次</string>
    <string name="input_batch">请输入代次</string>
    <string name="date">日期</string>
    <string name="all">全部</string>
    <string name="one_month">1个月</string>
    <string name="two_month">2个月</string>
    <string name="three_month">3个月</string>
    <string name="six_month">6个月</string>
    <string name="button_reset">重置</string>
    <string name="button_complete">完成</string>
    <string name="operator">操作员</string>
    <string name="input_operator_name">请输入操作员姓名</string>
    <string name="input_start_date">请输入开始日期</string>
    <string name="input_end_date">请输入结束日期</string>
    <string name="date_divider">-</string>
    <string name="intelligent_incubator_system">智能培养箱系统</string>
    <string name="input_password">请输入密码</string>
    <string name="loginto">登入</string>
    <string name="hangzhou_keyone_corporation">杭州键一生物科技有限公司</string>
    <string name="environment_params">环境参数</string>
    <string name="current_datas">当前数据</string>
    <string name="history_datas">历史数据</string>
    <string name="the_result_of_current_datas_search">当前数据检索结果</string>
    <string name="operation">操作</string>
    <string name="the_number_of_bottles">瓶数</string>
    <string name="the_result_of_history_datas_search">历史数据检索结果</string>
    <string name="temperature_setting_value">温度设定值:</string>
    <string name="init_number">0.0</string>
    <string name="degree">℃</string>
    <string name="humidity">湿度:</string>
    <string name="humidity_degree">%RH</string>
    <string name="co2_setting_value">CO₂设定值:</string>
    <string name="percent">%</string>
    <string name="history_alarm">历史报警</string>
    <string name="co2_value">CO₂值:</string>
    <string name="init_co2_value">00.0%</string>
    <string name="init_date">2018/01/01 00:00:00</string>
    <string name="is_remember_pwd">记住密码</string>
</resources>
