<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--浅色分割线-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"/>
    <!--标题布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name_his"
            android:text="@string/name_generation"
            android:layout_weight="2"
            style="@style/enpandablelistview_parent_layout_style"
            />

        <TextView

            android:id="@+id/tv_daici_his"
            android:text="@string/batch"
            android:layout_weight="1"
            style="@style/enpandablelistview_parent_layout_style"
            />

        <TextView
            android:id="@+id/tv_caozuo_his"
            android:layout_weight="1"
            android:text="@string/operation"
            style="@style/enpandablelistview_parent_layout_style"
            />

        <TextView
            android:id="@+id/tv_pingshu_his"
            android:layout_weight="1"
            android:text="@string/the_number_of_bottles"
            style="@style/enpandablelistview_parent_layout_style"
            />

        <TextView
            android:id="@+id/tv_date_his"
            android:text="@string/date"
            android:layout_weight="2"
            style="@style/enpandablelistview_parent_layout_style"
            />

        <TextView
            android:id="@+id/tv_operator_his"
            android:text="@string/operator"
            android:layout_weight="2"
            style="@style/enpandablelistview_parent_layout_style"
            />


    </LinearLayout>



</LinearLayout>